# dotfiles

./: .Xresources  .aider.conf.yml  .aiderignore  .bash_aliases  .bash_aliases.d  .bash_functions  .bash_history  .bash_logout  .bash_profile  .bash_prompt  .bashrc  .cvspass  .editorconfig  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .htoprc  .inputrc  .markdownlint.json  .minicpanrc  .perlcriticrc  .perldb  .perltidyrc  .pre-commit-config-fix.yaml  .pre-commit-config.yaml  .proselintrc  .rpmmacros  .rtorrent.rc  .rvmrc  .screenrc  .startup  .style.yapf  .taskrc  .tmux.conf  .vimrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  (+61 more)
.anki/: ArticlesOfFaith.anki  Python.anki  config.db
.aptitude/: config
.bash_aliases.d/: cvs  date  dzil  general  grep  less  ls  perl  ruby  taskwarrior
.bash_completion.d/: bash-completion-config  bitkeeper  bittorrent  cksfv  clisp  dep  dsniff  fbcmd-completion.bash  freeciv  gcl  genlop  gkrellm  harbour  herdstat  isql  larch  lilypond  lisp  mailman  mcrypt  mtx  p4  ri  rkhunter  sbcl  sitecopy  ssh-config-completion.bash  su-completion.bash  task-completion  xxd
.bash_functions.d/: ansi  cowsay  define  git_functions  man  util
.bash_profile.d/: calibre_profile  cvs  go  (+5 more)
config/pypoetry/: .gitignore  pyproject.toml
get-vault-key/: __init__.py  get-vault-key.py  get-vault-key.py.bak  get_vault_key.py  mock-vault-paths.json  pyproject.toml  requirements.txt  test_vault_key_manager.py  testit
get-vault-key/get_vault_key/: exceptions.py  manager.py  utils.py
get-vault-key/tests/: test_vault_key_manager.py
(+1037 files in other folders)
